@@ -5,9 +5,7 @@
  */
 
 configure(javaSubprojects) {
-	dependencies {
-		testCompile group: 'junit', name: 'junit', version: '4.+'
-		testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.+'
-		testCompile group: 'org.mockito', name: 'mockito-core', version: '1.+'
+	test {
+		jvmArgs '-Xverify:none'
 	}
 }
